2006-06-07  Jon A. Cruz  <jon@joncruz.org>

	* packaging/macosx/ScriptExec/main.c, packaging/osx-app.sh:

	  Fixing OS X fc-cache problem.
	  Applied patch #1502063.

2006-06-07  Jon A. Cruz  <jon@joncruz.org>

	* src/sp-item-group.cpp, src/sp-path.cpp, src/sp-star.cpp,
	  src/sp-switch.cpp, src/ui/widget/ruler.cpp:

	  Applied patch #1501709.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp, trace/siox.h, trace/trace.cpp,
	  src/ui/dialog/tracedialog.cpp:

	  Applied patch #1501375.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp, trace/trace.cpp:

	  Applied patch #1501134.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.cpp:

	  Allow action when no layer selected.
	  Fixes bugs #1494646.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* trace/siox.cpp:

	  Applied patch #1500659.

2006-06-05  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:

	  Blocked signal when changes are not from the layers UI.
	  Fixes bugs #1495406 and most of #1494646.

2006-06-02  Colin Marquardt  <colin@marquardt-home.de>

	* TRANSLATORS: Add Stefan Graubner.

2006-06-01  Jon A. Cruz  <jon@joncruz.org>

	* src/extension/internal/pdf-mini.h

	  Fix for delete[] mismatch and binary tweak from Ulf Erikson.

2006-06-01  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:

	  Added layer opacity slider.
	  Fixes RFE #1496569.

2006-05-31  Colin Marquardt  <colin@marquardt-home.de>

	* TRANSLATORS: Add vonHalenbach for tutorial translations.

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/extension/internal/odf.cpp:
	Corrected deletes and uninitizlied variables.
	Fixes bug# 1489961.

2006-05-30 John Cliff <simarilius@yahoo.com>
	src/trace/potrace/inkscape-potrace.cpp
	Changed bitsPerSample from hardcoded to calculated for multi color traces
	to fix bugs 1188811 and 1484076

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/xml/repr-io.cpp: